--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "dev": "webpack --config webpack.dev.js --mode=development",
         "watch": "webpack --config webpack.dev.js --mode=development --watch",
         "prezip": "npm install && npm run prod",
-        "zip": "zip -r LiveStreaming.zip controllers assets migrations views lib LICENSE README.md LiveStreaming.php plugin.manifest package-lock.json"
+        "zip": "zip -r LiveStreaming.zip controllers assets migrations views lib images LICENSE README.md LiveStreaming.php plugin.manifest package-lock.json"
     },
     "author": "ELAN e.V. (zamani@uos.de)",
     "devDependencies": {
