--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "LiveStreaming",
-    "version": "1.2",
+    "version": "1.3",
     "description": "StudIP Live Streaming Plugin",
     "main": "index.js",
     "scripts": {
@@ -19,11 +19,12 @@
         "css-loader": "^5.2.4",
         "css-minimizer-webpack-plugin": "^2.0.0",
         "file-loader": "^6.2.0",
+        "hls.js": "^1.1.5",
         "mini-css-extract-plugin": "^1.6.0",
+        "openplayerjs": "^2.9.4",
         "sass": "^1.32.12",
         "sass-loader": "^11.1.0",
         "terser-webpack-plugin": "^5.1.1",
-        "video.js": "^7.11.8",
         "webpack": "^5.37.0",
         "webpack-cli": "^4.7.0",
         "webpack-merge": "^5.7.3"
